--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "antd": "^5.14.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
